--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -8,19 +8,17 @@
   &-content {
     @apply w-1/2 pl-28;
 
-    & h1 {
-      @apply pb-10 pr-20 text-6xl font-semibold;
+    & .landing-title-wrapper {
+      @apply py-5 pr-20  mb-5 overflow-y-auto;
+    }
+
+    & .landing-title,
+    .landing-letter {
+      @apply relative inline-block text-6xl font-semibold;
     }
     & p {
       @apply text-xl;
       line-height: 150%;
-    }
-
-    & img {
-      @apply w-[500px] opacity-100;
-    }
-    & span {
-      @apply mt-5 text-5xl font-semibold;
     }
   }
   &-logo {
@@ -32,29 +30,6 @@
   }
   &-text {
     @apply mt-10 tracking-[5px];
-  }
-}
-
-.services {
-  &-container {
-    @apply relative h-screen w-full;
-    & .title-wrapper {
-      @apply mt-20 w-full bg-white;
-      & h3 {
-        @apply text-[5rem];
-      }
-    }
-    .parallax {
-      @apply h-screen w-full;
-    }
-  }
-
-  &-card {
-    @apply flex items-center justify-center  py-10  px-10;
-
-    & h4 {
-      @apply text-center text-5xl font-semibold leading-normal;
-    }
   }
 }
 
