feat: navbar styles and initial animations.

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -1,4 +1,4 @@
-@import './components/header';
-@import './components/cursor';
-@import './components/sidemenu';
-@import './components/loader';
+@import "./components/header";
+@import "./components/cursor";
+@import "./components/sidemenu";
+@import "./components/loader";
