--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -1,28 +1,28 @@
 .landing-container {
-  @apply h-screen mx-auto container;
+  @apply container mx-auto lg:h-screen;
 }
 
 .landing {
-  @apply relative flex h-full w-full items-center justify-center;
+  @apply relative flex h-full w-full justify-center lg:items-center;
 
   &-content {
-    @apply w-1/2 pl-28;
+    @apply px-5 md:w-8/12 lg:pl-12 xl:w-1/2 xl:pl-28;
 
     & .landing-title-wrapper {
-      @apply py-5 pr-20  mb-5 overflow-y-auto;
+      @apply overflow-y-auto py-5 pb-5 lg:mb-5 lg:pr-20;
     }
 
     & .landing-title,
     .landing-letter {
-      @apply relative inline-block text-6xl font-semibold;
+      @apply relative inline-block text-4xl font-semibold lg:text-6xl;
     }
     & p {
-      @apply text-xl;
+      @apply text-base lg:text-xl;
       line-height: 150%;
     }
   }
   &-logo {
-    @apply flex  w-1/2  items-center justify-center;
+    @apply hidden w-4/12  items-center  justify-center md:flex lg:w-1/2;
 
     & img {
       @apply aspect-square w-3/12;
