--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,11 +1,11 @@
-// import tailwind 
-@import './tailwind.scss';
+// import tailwind
+@import "./tailwind.scss";
 
 //import base styles
-@import './base/base';
+@import "./base/base";
 
 // import components
-@import './components';
+@import "./components";
 
 // import pages
-@import './pages';
+@import "./pages";
