--- a/styles/components/_sidemenu.scss
+++ b/styles/components/_sidemenu.scss
@@ -1,11 +1,50 @@
-.sidemenu {
-  @apply float-right h-screen bg-white p-10 shadow-xl lg:w-2/3;
-
-  &-wrapper {
-    @apply fixed left-0 top-0 z-50 h-screen w-full bg-slate-200 bg-opacity-70 shadow-xl;
+.sidemenu_ {
+  &_wrapper {
+    @apply absolute top-0 right-0 z-40 flex h-screen w-full bg-[#eeeeeeb3] bg-opacity-80;
+  }
+  &_backdrop {
+    @apply flex-auto;
+  }
+  &_container {
+    @apply flex h-full w-2/3 flex-col justify-between bg-white;
+  }
+  &_header {
+    @apply flex justify-end p-14;
   }
 
-  &-links {
-    @apply z-50 mt-10 flex flex-col gap-5 px-52 text-8xl;
+  &_content {
+    @apply flex flex-row px-10 ;
+
+    &_items {
+      @apply pl-44 text-7xl font-bold;
+    }
+    &_item {
+      @apply py-5;
+    }
+    &_resources {
+      @apply flex flex-auto flex-col items-center pt-36 pl-10 pr-20 text-2xl;
+
+      & h4 {
+        @apply text-5xl font-bold uppercase text-[#5C5C5C];
+      }
+      & a {
+        @apply mt-5  text-4xl;
+      }
+    }
+  }
+
+  &_footer {
+    @apply flex flex-row justify-between py-10 px-20 pl-24;
+
+    & .social-links {
+      @apply text-2xl;
+
+      & a {
+        @apply mr-10;
+      }
+    }
+    & .multilingual {
+      @apply text-2xl;
+    }
   }
 }
