--- a/styles/components/_sidemenu.scss
+++ b/styles/components/_sidemenu.scss
@@ -13,7 +13,7 @@
   }
 
   &_content {
-    @apply flex flex-row px-10 ;
+    @apply flex flex-row px-10;
 
     &_items {
       @apply pl-44 text-7xl font-bold;
@@ -34,10 +34,10 @@
   }
 
   &_footer {
-    @apply flex flex-row justify-between py-10 px-20 pl-24;
+    @apply flex flex-row justify-between py-5 px-20 pl-24;
 
     & .social-links {
-      @apply text-2xl;
+      @apply text-2xl flex ;
 
       & a {
         @apply mr-10;
