--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -26,7 +26,7 @@
   &::before {
     content: '';
     transition: width 0.8s cubic-bezier(0.25, 1, 0.5, 1);
-    @apply absolute bottom-0 right-0 h-0.5 w-0 bg-current no-underline;
+    @apply absolute bottom-0 right-0 h-[2px] w-0 bg-current no-underline;
   }
 }
 
