style: fix sidemenu social padding

--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -30,7 +30,7 @@
   }
 }
 
-@media (hover: hover) and (pointer: fine) {
+@media (hover: hover) {
   .underline-link:hover::before {
     @apply left-0 right-0 w-full bg-current text-current no-underline;
   }
