--- a/styles/components/_sidemenu.scss
+++ b/styles/components/_sidemenu.scss
@@ -6,10 +6,10 @@
     @apply hidden flex-auto lg:block;
   }
   &_container {
-    @apply h-full w-full flex-col justify-between bg-white lg:w-2/3 xl:flex;
+    @apply h-full w-full flex-col justify-between bg-white xl:flex xl:w-2/3;
   }
   &_header {
-    @apply flex justify-end p-8 pb-3 2xl:p-16;
+    @apply flex justify-end p-8 pb-3 2xl:p-16 2xl:pb-0;
 
     &_closebutton {
       @apply cursor-pointer;
@@ -23,7 +23,7 @@
   }
 
   &_content {
-    @apply flex flex-col px-10 lg:flex-row;
+    @apply flex flex-col px-10 md:flex-row;
 
     &_items {
       @apply text-5xl font-bold lg:pl-10 lg:text-5xl xl:pl-14 2xl:pl-24 2xl:text-7xl;
@@ -32,9 +32,9 @@
       @apply pt-3 lg:pt-4 2xl:py-5;
     }
     &_resources {
-      @apply flex-col items-center pt-10 pr-20 text-2xl lg:flex lg:flex-auto lg:pt-14 lg:pl-10 2xl:pt-36;
+      @apply flex-col items-center  pr-20 pt-10 text-2xl md:flex md:flex-auto md:justify-center md:pt-0 lg:pl-10;
       &_wrapper {
-        @apply grid grid-cols-2 flex-col items-center lg:flex;
+        @apply sm:grid grid-cols-2 flex-col items-center md:flex;
       }
 
       & h4 {
@@ -53,15 +53,15 @@
       @apply pl-10;
 
       & h4 {
-        @apply block text-3xl font-bold uppercase text-[#5C5C5C] lg:hidden lg:text-5xl;
+        @apply block text-3xl font-bold uppercase text-[#5C5C5C] lg:mt-10 xl:hidden;
       }
 
       &_wrapper {
-        @apply grid grid-cols-2 pr-20 text-xl lg:flex 2xl:pr-20 2xl:text-2xl;
+        @apply grid grid-cols-2 pr-20 text-xl lg:pr-0 xl:flex 2xl:pr-20 2xl:text-2xl;
       }
 
       &_item {
-        @apply mt-3 text-2xl xl:mr-10 2xl:mt-5;
+        @apply mt-3 text-2xl lg:mr-10 2xl:mt-5;
       }
     }
     & .multilingual {
