--- a/styles/base/_base.scss
+++ b/styles/base/_base.scss
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Public+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
   overflow-y: scroll;
 }
@@ -43,6 +43,22 @@ body {
 
 .bz-button {
   @apply bg-purple-500 tracking-wider text-white;
+}
+
+.underline-link {
+  @apply relative no-underline;
+
+  &::before {
+    content: '';
+    transition: width 0.8s cubic-bezier(0.25, 1, 0.5, 1);
+    @apply absolute bottom-0 right-0 h-[2px] w-0 bg-current no-underline;
+  }
+}
+
+@media (hover: hover) {
+  .underline-link:hover::before {
+    @apply left-0 right-0 w-full bg-current text-current no-underline;
+  }
 }
 
 /* width */
