--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -33,8 +33,39 @@
   }
 }
 
-.worldwithus {
-  &-container {
-    @apply relative flex  h-screen w-full;
+// testimonials section
+.testimonials_ {
+  @apply container mx-auto mb-40  px-5 pt-14 2xl:pt-20;
+  & h3 {
+    @apply text-3xl font-semibold md:text-5xl 2xl:text-6xl;
+  }
+
+  &_content__item {
+    @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-28 2xl:pt-16;
+
+    &_image {
+      @apply relative hidden w-3/12 overflow-hidden object-cover lg:block;
+
+      & img {
+        @apply w-full;
+      }
+    }
+    &_content {
+      @apply relative flex flex-col-reverse overflow-hidden pt-2 lg:w-9/12  lg:flex-col xl:pt-5 2xl:pt-10;
+
+      &_user {
+        @apply mt-8 flex w-full items-center overflow-hidden lg:mt-0 lg:block;
+      }
+
+      & .person {
+        @apply text-2xl font-semibold md:text-3xl 2xl:text-5xl;
+      }
+      & .role {
+        @apply mt-1 truncate text-lg md:text-xl lg:mt-2 2xl:mt-3 2xl:text-2xl;
+      }
+      & .text {
+        @apply pt-8 text-2xl text-slate-800 2xl:text-3xl;
+      }
+    }
   }
 }
