--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -37,7 +37,7 @@
 .testimonials_ {
   @apply container mx-auto mb-20 px-5  pt-14 lg:mb-40 2xl:pt-20;
   & h3 {
-    @apply text-3xl font-semibold md:text-5xl 2xl:text-6xl;
+    @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
   }
 
   &_content__item {
@@ -75,7 +75,7 @@
 .collaborate_ {
   @apply bg-[url(/_next/static/media/collaborate-img.5818b821.png)] bg-cover bg-no-repeat lg:mx-auto lg:bg-none;
   & h3 {
-    @apply text-3xl font-semibold text-white md:text-5xl lg:text-black 2xl:text-6xl;
+    @apply text-3xl font-semibold text-white md:text-4xl  lg:text-5xl 2xl:text-6xl;
   }
   &_bgwrapper {
     @apply bg-slate-900 bg-opacity-80 px-5 pt-14 pb-40 lg:bg-inherit 2xl:pt-20;
@@ -86,7 +86,7 @@
       @apply w-full lg:w-2/3;
 
       & p {
-        @apply pt-8 text-lg text-white lg:text-3xl lg:text-slate-800;
+        @apply pt-8 text-lg text-gray-300 lg:text-3xl lg:text-slate-800;
       }
       & .talk-btn {
         @apply mt-8 rounded-full border-2 border-purple-700 bg-purple-700 px-7 py-2 text-lg text-white lg:bg-transparent lg:text-2xl lg:text-purple-700;
@@ -132,7 +132,7 @@
       @apply flex flex-row justify-center  pt-14 text-9xl text-[25vw] opacity-50 md:text-[35vh] lg:text-[40vh] xl:text-[48vh] 2xl:text-[55vh];
       -webkit-text-fill-color: transparent;
       -webkit-text-stroke-width: 3px;
-      font-family: "Poppins";
+      font-family: 'Poppins';
     }
   }
 }
@@ -142,7 +142,7 @@
 .ourteam_ {
   @apply container mx-auto;
   & h3 {
-    @apply text-3xl font-semibold md:text-5xl 2xl:text-6xl;
+    @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
   }
   &_bgwrapper {
     @apply relative px-5 pt-16 pb-40 md:pb-60 lg:pb-80 xl:pb-96 2xl:pt-20;
@@ -169,6 +169,25 @@
       -webkit-text-fill-color: transparent;
       -webkit-text-stroke-width: 3px;
       -webkit-text-stroke-color: black;
+    }
+  }
+}
+
+.partners {
+  &_container {
+    @apply container mx-auto mt-20  px-5 2xl:mt-52;
+
+    & h3 {
+      @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
+    }
+  }
+
+  &_card {
+    &_container {
+      @apply mx-auto my-10 grid w-3/4 grid-cols-2 items-center justify-center gap-x-10 lg:my-20 lg:w-1/2 lg:gap-x-20 xl:mt-32;
+    }
+    &_image {
+      @apply relative h-auto w-full overflow-hidden object-cover opacity-50 grayscale transition-all duration-300 ease-in-out hover:opacity-100 hover:grayscale-0;
     }
   }
 }
