--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -184,10 +184,10 @@
 
   &_card {
     &_container {
-      @apply mx-auto my-10 grid w-3/4 grid-cols-2 items-center justify-center gap-x-10 lg:my-20 lg:w-1/2 lg:gap-x-20 xl:mt-32;
+      @apply mx-auto my-10 grid w-3/4 grid-cols-2 items-center justify-center gap-x-10 lg:my-20 lg:w-1/2 lg:gap-x-10 xl:mt-32;
     }
     &_image {
-      @apply relative h-auto w-full overflow-hidden object-cover opacity-50 grayscale transition-all duration-300 ease-in-out hover:opacity-100 hover:grayscale-0;
+      @apply relative h-auto w-full overflow-hidden object-cover opacity-100  transition-all duration-300 ease-in-out hover:scale-105 lg:p-5;
     }
   }
 }
