--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -187,7 +187,7 @@
       @apply mx-auto my-10 grid w-3/4 grid-cols-2 items-center justify-center gap-x-10 lg:my-20 lg:w-1/2 lg:gap-x-10 xl:mt-32;
     }
     &_image {
-      @apply relative h-auto w-full overflow-hidden object-cover opacity-100  transition-all duration-300 ease-in-out hover:scale-105 lg:p-5;
+      @apply relative h-auto w-full overflow-hidden object-cover opacity-100  lg:p-5;
     }
   }
 }
