--- a/styles/_tailwind.scss
+++ b/styles/_tailwind.scss
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .bz-container {
+    @apply container mx-auto mt-20 px-5 xl:px-14 2xl:mt-52 2xl:px-0;
+  }
+}
