--- a/styles/_tailwind.scss
+++ b/styles/_tailwind.scss
@@ -4,6 +4,9 @@
 
 @layer utilities {
   .bz-container {
-    @apply container mx-auto mt-20 px-5 xl:px-14 2xl:mt-52 2xl:px-0;
+    @apply container mx-auto mt-20 px-5  xl:px-14 2xl:mt-52 2xl:px-20 3xl:px-10;
+  }
+  .test-screens {
+    @apply sm:bg-teal-200 md:bg-red-300 lg:bg-purple-300 xl:bg-orange-300 2xl:bg-pink-300 3xl:bg-cyan-300;
   }
 }
