--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -1,163 +1,163 @@
 .landing-container {
-  @apply container mx-auto lg:h-screen;
+    @apply container mx-auto lg:h-screen;
 }
 
 .landing {
-  @apply relative h-full w-full justify-center lg:flex lg:items-center;
+    @apply relative h-full w-full justify-center lg:flex lg:items-center;
 
-  &-content {
-    @apply md:w-8/12 lg:pl-12 xl:w-1/2 xl:pl-28;
+    &-content {
+        @apply md:w-8/12 lg:pl-12 xl:w-1/2 xl:pl-28;
 
-    & .landing-title-wrapper {
-      @apply overflow-y-auto py-5 pb-5 pr-10 lg:mb-5 2xl:pr-20;
-    }
+        & .landing-title-wrapper {
+            @apply overflow-y-auto py-5 pb-5 pr-10 lg:mb-5 2xl:pr-20;
+        }
 
-    & .landing-title,
-    .landing-letter {
-      @apply relative inline-block text-4xl font-semibold lg:text-5xl 2xl:text-6xl;
+        & .landing-title,
+        .landing-letter {
+            @apply relative inline-block text-4xl font-semibold lg:text-5xl 2xl:text-6xl;
+        }
+        & p {
+            @apply text-base lg:text-xl;
+            line-height: 150%;
+        }
     }
-    & p {
-      @apply text-base lg:text-xl;
-      line-height: 150%;
-    }
-  }
-  &-logo {
-    @apply absolute left-[43%] top-[25%] -z-30 w-4/12  items-center justify-center  md:top-[-100%] lg:static lg:z-0 lg:flex lg:w-1/2;
+    &-logo {
+        @apply absolute left-[43%] top-[25%] -z-30 w-4/12  items-center justify-center  md:top-[-100%] lg:static lg:z-0 lg:flex lg:w-1/2;
 
-    & img {
-      @apply aspect-square w-3/12;
+        & img {
+            @apply aspect-square w-3/12;
+        }
     }
-  }
-  &-text {
-    @apply mt-10 tracking-[5px];
-  }
+    &-text {
+        @apply mt-10 tracking-[5px];
+    }
 }
 
 // testimonials section
 .testimonials_ {
-  @apply bz-container;
-  & h3 {
-    @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
-  }
-
-  &_content__item {
-    @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-20 2xl:pt-16;
-
-    &_image {
-      @apply relative hidden w-3/12 overflow-hidden object-cover lg:block;
-
-      & img {
-        @apply w-full;
-      }
+    @apply bz-container;
+    & h3 {
+        @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
     }
-    &_content {
-      @apply relative flex flex-col-reverse overflow-hidden pt-2 lg:w-9/12  lg:flex-col xl:pt-5 2xl:pt-10;
 
-      &_user {
-        @apply mt-8 flex w-full items-center truncate lg:mt-0 lg:block;
-      }
+    &_content__item {
+        @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-20 2xl:pt-16;
 
-      & .person {
-        @apply text-2xl font-semibold md:text-3xl 2xl:text-5xl;
-      }
-      & .role {
-        @apply mt-1 truncate text-lg md:text-xl lg:mt-2 2xl:mt-3 2xl:text-2xl;
-      }
-      & .text {
-        @apply pt-8 text-2xl text-slate-800 2xl:text-3xl;
-      }
+        &_image {
+            @apply relative hidden w-3/12 overflow-hidden object-cover lg:block;
+
+            & img {
+                @apply w-full;
+            }
+        }
+        &_content {
+            @apply relative flex flex-col-reverse overflow-hidden pt-2 lg:w-9/12  lg:flex-col xl:pt-5 2xl:pt-10;
+
+            &_user {
+                @apply mt-8 flex w-full items-center truncate lg:mt-0 lg:block;
+            }
+
+            & .person {
+                @apply text-2xl font-semibold md:text-3xl 2xl:text-5xl;
+            }
+            & .role {
+                @apply mt-1 truncate text-lg md:text-xl lg:mt-2 2xl:mt-3 2xl:text-2xl;
+            }
+            & .text {
+                @apply pt-8 text-2xl text-slate-800 2xl:text-3xl;
+            }
+        }
     }
-  }
 }
 
 // collaborate section
 
 .collaborate_ {
-  @apply mt-20 bg-[url(/_next/static/media/collaborate-img.5818b821.png)] bg-cover bg-no-repeat lg:mx-auto lg:bg-none;
-  & h3 {
-    @apply text-3xl font-semibold text-black md:text-4xl  lg:text-5xl 2xl:text-6xl;
-  }
-  &_bgwrapper {
-    @apply bg-slate-900 bg-opacity-80 pt-14 pb-40 lg:bg-inherit 2xl:pt-20;
-  }
-  &_content {
-    @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-20 2xl:pt-16;
-    &_wrapper {
-      @apply bz-container;
+    @apply mt-20 lg:mx-auto;
+    & h3 {
+        @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
     }
-
-    &_text {
-      @apply w-full lg:w-2/3;
-
-      & p {
-        line-height: 150% !important;
-        @apply pt-8 text-lg   text-gray-300 lg:text-xl lg:text-slate-800 2xl:text-3xl;
-      }
-      .talk-btn {
-        @apply mt-8 rounded-full border-2 border-purple-700 bg-purple-700 px-7 py-2 text-lg text-white lg:bg-transparent lg:text-2xl lg:text-purple-700;
-      }
+    &_bgwrapper {
+        @apply pt-14 pb-40 lg:bg-inherit 2xl:pt-20;
     }
-    &_image {
-      @apply relative hidden w-1/3 overflow-hidden object-cover lg:block;
+    &_content {
+        @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-20 2xl:pt-16;
+        &_wrapper {
+            @apply bz-container;
+        }
 
-      & img {
-        @apply w-full;
-      }
+        &_text {
+            @apply w-full lg:w-2/3;
+
+            & p {
+                line-height: 150% !important;
+                @apply pt-8 text-lg   text-slate-800 lg:text-xl 2xl:text-3xl;
+            }
+            .talk-btn {
+                @apply mt-4 rounded-full border-2 border-purple-700 text-lg  text-purple-700 sm:mt-8 lg:bg-transparent lg:text-2xl;
+            }
+        }
+        &_image {
+            @apply relative hidden w-1/3 overflow-hidden object-cover lg:block;
+
+            & img {
+                @apply w-full;
+            }
+        }
     }
-  }
 }
 
 .shape {
-  @apply absolute top-0 left-0 hidden  h-auto w-full md:top-20 lg:top-0 lg:block;
+    @apply absolute top-0 left-0 hidden  h-auto w-full md:top-20 lg:top-0 lg:block;
 }
 
 // service card section
 
 .servicecard_ {
-  @apply bz-container;
-  & h3 {
-    @apply text-3xl font-semibold md:text-5xl 2xl:text-6xl;
-  }
-  &_bgwrapper {
-    @apply px-5 pt-14 pb-24 2xl:pt-20;
-  }
-  &_content {
-    @apply flex w-full justify-center pt-4 lg:gap-x-10 lg:pt-8 xl:gap-x-16 2xl:pt-10;
-    &_text {
-      @apply w-full;
+    @apply bz-container;
+    & h3 {
+        @apply text-3xl font-semibold md:text-5xl 2xl:text-6xl;
+    }
+    &_bgwrapper {
+        @apply px-5 pt-14 pb-24 2xl:pt-20;
+    }
+    &_content {
+        @apply flex w-full justify-center pt-4 lg:gap-x-10 lg:pt-8 xl:gap-x-16 2xl:pt-10;
+        &_text {
+            @apply w-full;
 
-      & p {
-        @apply text-lg text-slate-800 lg:text-2xl;
-      }
-      & .learn-btn {
-        @apply mt-6 rounded-full border-2 px-7 py-2 text-lg lg:text-2xl;
-      }
+            & p {
+                @apply text-lg text-slate-800 lg:text-2xl;
+            }
+            & .learn-btn {
+                @apply mt-6 rounded-full border-2 px-7 py-2 text-lg lg:text-2xl;
+            }
+        }
+        &_bigtxt {
+            @apply flex flex-row justify-center  pt-14 text-9xl text-[25vw] opacity-50 md:text-[35vh] lg:text-[40vh] xl:text-[48vh] 2xl:text-[55vh];
+            -webkit-text-fill-color: transparent;
+            -webkit-text-stroke-width: 3px;
+            font-family: "Poppins";
+        }
     }
-    &_bigtxt {
-      @apply flex flex-row justify-center  pt-14 text-9xl text-[25vw] opacity-50 md:text-[35vh] lg:text-[40vh] xl:text-[48vh] 2xl:text-[55vh];
-      -webkit-text-fill-color: transparent;
-      -webkit-text-stroke-width: 3px;
-      font-family: 'Poppins';
-    }
-  }
 }
 
 // partners section
 .partners {
-  &_container {
-    @apply bz-container;
-
-    & h3 {
-      @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
-    }
-  }
-
-  &_card {
     &_container {
-      @apply mx-auto my-10 grid w-3/4 grid-cols-2 items-center justify-center gap-x-10 lg:my-20 lg:w-1/2 lg:gap-x-10 xl:mt-32;
+        @apply bz-container;
+
+        & h3 {
+            @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
+        }
     }
-    &_image {
-      @apply relative h-auto w-full overflow-hidden object-cover opacity-100  lg:p-5;
+
+    &_card {
+        &_container {
+            @apply mx-auto my-10 grid w-3/4 grid-cols-2 items-center justify-center gap-x-10 lg:my-20 lg:w-1/2 lg:gap-x-10 xl:mt-32;
+        }
+        &_image {
+            @apply relative h-auto w-full overflow-hidden object-cover opacity-100  lg:p-5;
+        }
     }
-  }
 }
