--- a/styles/components/_sidemenu.scss
+++ b/styles/components/_sidemenu.scss
@@ -6,7 +6,7 @@
     @apply hidden flex-auto lg:block;
   }
   &_container {
-    @apply test-screens h-full w-full flex-col justify-between bg-white xl:flex xl:w-2/3;
+    @apply  h-full w-full flex-col justify-between bg-white xl:flex xl:w-2/3;
   }
   &_header {
     @apply flex justify-end p-8 pb-3 2xl:p-16 2xl:pb-0;
