--- a/styles/pages/_home-page.scss
+++ b/styles/pages/_home-page.scss
@@ -78,7 +78,7 @@
         @apply text-3xl font-semibold md:text-4xl  lg:text-5xl 2xl:text-6xl;
     }
     &_bgwrapper {
-        @apply pt-14 pb-40 lg:bg-inherit 2xl:pt-20;
+        @apply pb-20 lg:bg-inherit;
     }
     &_content {
         @apply flex w-full justify-center lg:gap-x-10 lg:px-5 lg:pt-8 xl:gap-x-16 xl:px-20 2xl:pt-16;
@@ -197,10 +197,10 @@
 // project section
 .project-section {
     &-wrapper {
-        @apply relative overflow-hidden;
+        @apply relative mt-14 overflow-hidden 2xl:mt-36;
     }
     &-content {
-        @apply py-20 pb-32 lg:pb-52;
+        @apply py-5 pb-32 lg:py-20 lg:pb-52;
         background: linear-gradient(159.29deg, #ffffff 25.86%, rgba(255, 255, 255, 0) 77.78%);
 
         & h3 {
@@ -224,8 +224,9 @@
     }
 
     &_card {
+        @apply min-h-[3rem];
         &_container {
-            @apply mx-auto my-10 grid w-3/4 grid-cols-2 items-center justify-center gap-x-10 lg:my-20 lg:w-1/2 lg:gap-x-10 xl:mt-32;
+            @apply mx-auto mt-10 mb-0 grid w-full grid-cols-2 items-center justify-center gap-x-5 md:w-3/4 lg:mt-10 lg:w-1/2 lg:gap-x-10 xl:mt-20;
         }
         &_image {
             @apply relative h-auto w-full overflow-hidden object-cover opacity-100  lg:p-5;
