--- a/styles/pages/_blog-page.scss
+++ b/styles/pages/_blog-page.scss
@@ -1,5 +1,5 @@
 .blog_card_large {
-  @apply hidden w-full  flex-col gap-x-6 md:flex-row lg:col-span-2  lg:flex xl:col-span-3 2xl:gap-x-10;
+  @apply hidden w-full cursor-pointer  flex-col gap-x-6 md:flex-row lg:col-span-2  lg:flex xl:col-span-3 2xl:gap-x-10;
   &_img {
     @apply aspect-video w-full lg:w-1/2;
 
@@ -48,10 +48,10 @@
 }
 
 .blog_card {
-  @apply flex w-full flex-col gap-x-6;
+  @apply flex w-full cursor-pointer flex-col gap-x-6;
 
   &_image {
-    @apply relative aspect-video w-full;
+    @apply relative aspect-video w-full overflow-hidden;
     & img {
       @apply h-full w-full object-cover;
     }
@@ -85,4 +85,46 @@
       }
     }
   }
+}
+
+article {
+  @apply py-10;
+  & h2 {
+    @apply mt-4 text-2xl lg:text-4xl;
+  }
+  & h3 {
+    @apply mt-3 text-3xl;
+  }
+  & h4 {
+    @apply mt-2 text-2xl;
+  }
+  & h5 {
+    @apply text-xl;
+  }
+  & .section_content {
+    @apply px-5;
+  }
+  ol {
+    @apply translate-x-9 list-decimal;
+  }
+  ul {
+    @apply translate-x-9 list-disc;
+  }
+
+  & p {
+    @apply py-5 text-lg;
+  }
+  & img {
+    @apply mx-auto my-5 w-full object-cover  md:w-1/2;
+  }
+
+  & a {
+    @apply font-semibold text-indigo-500 hover:text-indigo-600 hover:underline;
+  }
+}
+
+.progress-bar {
+  @apply fixed top-0 left-0 right-0 z-50 h-1 bg-indigo-500;
+
+  transform-origin: 0%;
 }
